# gray-scott-sim

./: CMakeLists.txt  README.md  main.cpp
test/: test.cpp
